# gastronomy

./: .gitmodules  README.md
manipulation/: .gitignore  CMakeLists.txt  README.md  test_robolib.cpp
manipulation/CAD Models/: FRANKA_ARM_REALSENSE_CAMERA_MOUNT_V2.SLDPRT  UR5e_ROBOTIQ_HAND_E_KNIFE_HOLDER.SLDPRT  tool_holder.SLDPRT
manipulation/DMP_weight_clustering_and_GAN/: Discriminator_network.py  Generator_network.py  PCA_weights.py  combined_weights_alpha_forPCA.txt  combined_weights_beta_forPCA.txt  combined_weights_gamma_forPCA.txt  combined_weights_x_forPCA.txt  combined_weights_y_forPCA.txt  combined_weights_z_forPCA.txt  combined_wts_xyz_dims_forGAN.txt  data.py  main_cGAN.py  main_regGAN.py  train_GAN.py
manipulation/action_relation/: README.md  requirements.txt
manipulation/action_relation/run_scripts/: .run_voxel_model.py.swp  run_simple_model.sh  run_unscaled_online_contrastive.sh  run_unscaled_online_contrastive_2.sh  run_voxel_model.sh  run_voxel_model_q_change.sh  run_voxel_model_unscaled.sh
manipulation/action_relation/sim_vrep/: multi_shape_scene.py  multi_shape_scene_2.py  multi_shape_scene_sample_near.py  multi_shape_scene_sample_near_simple.py  multi_shape_scene_sample_push.py  robot_scene_1.py  robot_scene_2.py  robot_scene_3.py  robot_scene_4_go_down_initial.py  robot_scene_4_orient_change.py  robot_scene_4_orient_change_cut_food.py  robot_scene_4_orient_change_paper_data.py  scene_0.ttt  test.py  test_old.py  test_scene_on.py  test_scene_on_random.py
manipulation/action_relation/utils/: bounding_box_utils.py  control_loop_data.py  control_loop_data_utils.py  data_utils.py  extract_imgs_from_subdirs.py  image_utils.py  print_skill_info.py  rosbag_utils.py  torch_utils.py
manipulation/azure_kinect_calibration/: fusion.py  k4a_pcl_registration_open3d.py  k4a_pcl_synthesis_all_open3d.py  k4a_pcl_synthesis_open3d.py  k4a_sfm_reg.py  pcl_registration_utils.py  register_camera.py  register_camera_with_franka.py  test_ros_azure_kinect.py  test_ros_k4a_pcl.py
manipulation/azure_kinect_calibration/cfg/: register_camera_azure_kinect_local.yaml  register_camera_azure_kinect_with_franka.yaml  register_camera_kinect_local.yaml
manipulation/azure_kinect_calibration/data_save_scripts/: collect_single_data_script.sh  create_pcd_from_saved_data.py  k4a_data_save_open3d.py  visualize_cloud_clusters.py
manipulation/azure_kinect_calibration/utils/: prepare_multi_dir_calibration_data.py
manipulation/changepoint_detection/data/: acquire_tomato.txt  spoon_poses_both.txt
manipulation/changepoint_detection/investigations/: Align Recordings.ipynb  ChangepointOnFeedingTrajectories.ipynb  CompareSegmentationReversingData.ipynb  SonyStatusReport20181205.ipynb  SonyStatusReport20181206.ipynb  SplitActualDemoRecording.ipynb
manipulation/contingency_planning/assets/: block_template.urdf
manipulation/contingency_planning/cfg/: block.yaml  block_template.yaml  cabinet.yaml  flip_block_with_spatula.yaml  flip_block_with_tongs.yaml  pick_up_block.yaml  pick_up_block_with_tongs.yaml  push_block.yaml  push_block_with_tongs.yaml
manipulation/contingency_planning/scripts/: block_policies.py  block_policies_with_spatula.py  block_policies_with_tongs.py  cabinet_policies.py  collate_data.py  collate_successful_cabinet_inputs.py  collect_all_pick_up_data.py  create_all_random_blocks.py  create_baseline_data.py  create_block_urdf.py  create_cabinet_contingency_data.py  create_contingency_planner_network_training_data.py  create_convolutional_network_data.py  create_grasp_network_training_data.py  create_joint_contingency_planning_network_training_data.py  create_new_contingency_planner_network_training_data.py  create_new_joint_contingency_planning_network_training_data.py  create_random_block.py  crop_depth_images_using_seg_image.py  crop_depth_images_using_seg_images.py  find_correct_lifts.py  fit_gaussian.py  fit_gaussian_process.py  flip_block_with_spatula.py  flip_block_with_tongs.py  franka_policies.py  generate_cabinet_inputs.py  generate_file_names.py  generate_grasp_inputs.py  generate_urdf_contingency_data.py  get_pan_pose.py  open_cabinet.py  pick_up_block.py  pick_up_block_with_franka_fingers.py  pick_up_block_with_franka_fingers_nn.py  pick_up_block_with_spatula_flat.py  pick_up_block_with_spatula_tilted.py  pick_up_block_with_tongs.py  pick_up_block_with_tongs_overhead.py  pick_up_block_with_tongs_side.py  (+36 more)
manipulation/cutting-with-RL/dmp_wts_files/: 011321_piv_chop_potato_position_weights_zeroXY.pkl  011321_scoring_potato_position_weights_zeroYZ.pkl  092420_normal_cut_dmp_weights_zeroY.pkl
manipulation/cutting-with-RL/higher_level_param_learning_scripts/: run_learn_HL_controller_combos_UCB.py
manipulation/cutting-with-RL/lower_level_param_learning_scripts/: run_learn_LL_params_normalCut.py  run_learn_LL_params_pivchop.py  run_learn_LL_params_scoring.py
manipulation/cutting-with-RL/rl_utils/: reps.py
manipulation/data/traj_cut_Dec_7_12_30_AM/: traj_data_cut_1.txt  traj_data_cut_3.txt  traj_data_cut_4.txt  traj_data_cut_5.txt  traj_data_cut_7.txt  traj_data_cut_8.txt
manipulation/data/traj_cut_Dec_8_12_00_AM/: traj_data_cut_1.txt  traj_data_cut_2.txt  traj_data_cut_4.txt
manipulation/delta_robots/: .gitignore  README.md
manipulation/dmp/: README.md
manipulation/feedbot_trajectory_logic/: CMakeLists.txt
manipulation/franka-interface/: .gitignore
manipulation/iam_robolib/: CMakeLists.txt
manipulation/iam_robolib_common/: CMakeLists.txt
manipulation/log_data/: traj_data.txt
manipulation/magnetic_stickers/: .gitignore  README.md
manipulation/notebooks/: Visualize_Dmps.ipynb  visualize_all_cutting_data.ipynb
manipulation/plating/: README.md
manipulation/plating_demo/: package.xml
manipulation/playing_with_food/: README.md
manipulation/robot-interface/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main_iam_robolib.cpp  make_iam_robolib.sh  make_libfranka.sh
manipulation/shared_memory_test_app/: run_loop_process_info.h
manipulation/spoon_perception/: CMakeLists.txt  package.xml  setup.py
(+2582 files in other folders)
