<package>
  <name>delta_msgs</name>
  <version>0.1.0</version>
  <description>
  Float32 Array msg for Delta Robots
  </description>
  <maintainer email="kevinleezhang@gmail.com">Kevin Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag_migration_rule</run_depend>


</package>
